# wildguard

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
docs/: api_reference.md  user_guide.md
examples/wildguard_filter/: README.md  generate_with_wildguard_filter.py
examples/wildguard_filter/server/: empty_template.jinja  guarded_inference.py
server/: guarded_inference.py
tests/: test_sanity_check.py
wildguard/: __init__.py  utils.py  wildguard.py
