[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wildguard"
version = "1.0.0"
authors = [
  { name = "Kavel Rao", email = "kavelrao@cs.washington.edu" },
  { name = "Seungju Han", email = "wade3han@snu.ac.kr" },
]
description = "WildGuard safety classification inference"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.3.0",
  "tqdm>=4.66.2",
  "transformers>=4.40.2",
  "vllm>=0.4.2",
]

[tool.setuptools]
packages = ["wildguard"]

[project.urls]
Homepage = "https://github.com/allenai/wildguard"
Issues = "https://github.com/allenai/wildguard/issues"
